# camera-inference

./: Dockerfile  README.md  doover_config.json  pyproject.toml
models/yolo11n_ncnn_model/: metadata.yaml
models/yolov8n-pose_ncnn_model/: metadata.yaml
models/yolov8n_ncnn_model/: metadata.yaml
simulators/: app_config.json  docker-compose.yml  docker-compose.yml.backup
src/camera_inference/: __init__.py  app_config.py  app_state.py  application.py  cam_inference.py  video_capture.py  web_viewer.py
src/cattle_cam/: __init__.py  app_config.py  app_state.py  app_ui.py  application.py  cattle_cam.py  flask_app.py  hls_streamer.py
src/cattle_cam/templates/: video_player.html
templates/: index.html
tests/: test_imports.py
