[project]
name = "camera-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover>=0.4.12",
    "transitions>=0.9.2",
    "ultralytics",
    "opencv-python-headless",
    "pillow>=11.3.0",
    "ncnn>=1.0.20250503",
    "aiohttp-jinja2>=1.6",
]

[project.scripts]
doover-app-run = "camera_inference:main"
export-config = "camera_inference.app_config:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]
